<resources>
    <string name="app_name">CursProject</string>
    <string name="past">Past</string>
    <string name="today">Today</string>
    <string name="soon">Soon</string>
    <string name="add">add</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="time">time</string>
    <string name="date">date</string>

    <string name="input_time">input time</string>
    <string name="input_date">input date</string>

    <string name="incorrect_input">Incorrect input</string>
    <string name="ad_created">Ad was successfully created!</string>
    <string name="ad_created_callback">Ad was created, update required!</string>
    <string name="lists_updated">Lists were updated!</string>
</resources>
