<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="64dp"
        android:ems="12"
        android:inputType="textPersonName"
        android:text="@string/title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:onClick="ClickAddEvent"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTitle"
        android:layout_below="@+id/editTitle"
        android:layout_marginTop="38dp"
        android:ems="12"
        android:inputType="textMultiLine"
        android:text="@string/description"/>
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"/>

</RelativeLayout>